# ssc

./: .gitignore  .ignore  .rustfmt.toml  .taplo.toml  .typos.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  crates.js  deny.toml  help.html  index.html  justfile  oxc-parser.patch  search-index.js  settings.html  src-files.js
.cargo/: config.toml
.github/: SECURITY.md  dependabot.yml  renovate.json
assets/: playground-BD_IZdQv.js  playground-BEEEIiEa.js  playground-BF-bQ_NG.js  playground-BJV8amu2.js  playground-BRLy6P37.js  playground-BVYNtTsM.js  playground-BZoFHhbn.js  playground-Bdy_o1qj.js  playground-ByqMP0Fc.js  playground-CGqURbZO.js  playground-CO_mrZh-.js  playground-CYeo3ioT.js  playground-CwO7UI8a.js  playground-D4KMUogR.js  playground-DDy9tSDz.js  playground-DEUdsQTd.js  playground-Dq5B96Jj.js  playground-O9HjZOwO.js  playground-bLRcVIhP.js  playground-kDBWsu2T.js  ssc_wasm_bg-BhdN_cuy.wasm  ssc_wasm_bg-BjcBis_L.wasm  ssc_wasm_bg-Bkvs4qYc.wasm  ssc_wasm_bg-CEqWEf_9.wasm  ssc_wasm_bg-CHDniEgl.wasm  ssc_wasm_bg-CJRvjjnn.wasm  ssc_wasm_bg-CUu74Gii.wasm  ssc_wasm_bg-CfbM2NPf.wasm  ssc_wasm_bg-CuWYgEhr.wasm  ssc_wasm_bg-D2FYODV6.wasm  ssc_wasm_bg-D6xI4BfN.wasm  ssc_wasm_bg-DESvpqSO.wasm  ssc_wasm_bg-DwU8SKHg.wasm  ssc_wasm_bg-Dxpa9Jn9.wasm  ssc_wasm_bg-scE3Ju2x.wasm
crates/oxc_parser/: Cargo.toml
crates/oxc_parser/src/: cursor.rs  diagnostics.rs  lib.rs
crates/oxc_parser/src/js/: arrow.rs  binding.rs  class.rs  declaration.rs  expression.rs  function.rs  grammar.rs  list.rs  mod.rs  module.rs  object.rs  operator.rs  statement.rs
crates/oxc_parser/src/jsx/: mod.rs
crates/oxc_parser/src/lexer/: byte_handlers.rs  comment.rs  identifier.rs  jsx.rs  kind.rs  mod.rs  number.rs  numeric.rs  regex.rs  search.rs  source.rs  string.rs  template.rs  token.rs  trivia_builder.rs  unicode.rs
crates/oxc_parser/src/ts/: declaration.rs  list.rs  statement.rs  types.rs
crates/ssc/: Cargo.toml
crates/ssc/src/: lib.rs
crates/ssc_analyzer/: Cargo.toml
crates/ssc_analyzer/examples/: analyzer.rs
crates/ssc_analyzer/src/: lib.rs
crates/ssc_ast/: Cargo.toml
crates/ssc_ast/src/: ast.rs  ast_builder.rs  lib.rs  span.rs  trivia.rs
crates/ssc_ast/src/visit/: visit.rs  visit_mut.rs
crates/ssc_codegen/: Cargo.toml
crates/ssc_codegen/examples/: codegen.rs  sourcemap.rs
crates/ssc_codegen/src/: gen.rs  lib.rs
crates/ssc_css_ast/: Cargo.toml
crates/ssc_css_ast/src/: ast.rs  ast_builder.rs  ast_kind.rs  lib.rs  span.rs
crates/ssc_css_ast/src/visit/: visit.rs  visit_mut.rs
crates/ssc_css_codegen/: Cargo.toml
crates/ssc_css_codegen/examples/: codegen.rs  sourcemap.rs
crates/ssc_css_codegen/src/: gen.rs  lib.rs
crates/ssc_css_parser/: Cargo.toml
crates/ssc_css_parser/examples/: multi-thread.rs  parser.rs  visitor.rs
crates/ssc_css_parser/src/: block.rs  cursor.rs  diagnostics.rs  lib.rs  rule.rs  selector.rs  value.rs
crates/ssc_css_parser/src/lexer/: kind.rs  mod.rs  string.rs  trivia_builder.rs
crates/ssc_transformer/: Cargo.toml
crates/ssc_transformer/src/: lib.rs
crates/ssc_wasm/: Cargo.toml
crates/ssc_wasm/src/: lib.rs  options.rs
crates/svelte_oxide/: Cargo.toml
crates/svelte_oxide/src/: lib.rs
crates/svelte_oxide_analyzer/: Cargo.toml
crates/svelte_oxide_analyzer/src/: lib.rs
crates/svelte_oxide_ast/: Cargo.toml
crates/svelte_oxide_ast/src/: ast.rs  ast_builder.rs  ast_kind.rs  css.rs  lib.rs  macros.rs  span.rs  template.rs  trivia.rs
crates/svelte_oxide_ast/src/ast/: css.rs  macros.rs  mod.rs  template.rs
crates/svelte_oxide_ast/src/visit/: visit.rs  visit_mut.rs
crates/svelte_oxide_codegen/: Cargo.toml
crates/svelte_oxide_codegen/examples/: codegen.rs  sourcemap.rs
crates/svelte_oxide_codegen/src/: gen.rs  lib.rs
crates/svelte_oxide_common/: Cargo.toml
crates/svelte_oxide_common/src/: options.rs
crates/svelte_oxide_css_ast/: Cargo.toml
crates/svelte_oxide_css_ast/src/: ast.rs  ast_builder.rs  ast_kind.rs  lib.rs
crates/svelte_oxide_css_ast/src/visit/: visit.rs  visit_mut.rs
crates/svelte_oxide_css_codegen/: Cargo.toml
crates/svelte_oxide_css_codegen/examples/: codegen.rs  sourcemap.rs
crates/svelte_oxide_css_codegen/src/: gen.rs  lib.rs  sourcemap_builder.rs
crates/svelte_oxide_css_parser/: Cargo.toml
crates/svelte_oxide_css_parser/examples/: multi-thread.rs  parser.rs  visitor.rs
crates/svelte_oxide_css_parser/src/: block.rs  cursor.rs  diagnostics.rs  lib.rs  rule.rs  selector.rs  value.rs
crates/svelte_oxide_css_parser/src/lexer/: byte_handlers.rs  comment.rs  mod.rs  source.rs  trivia_builder.rs
crates/svelte_oxide_css_transformer/: Cargo.toml
crates/svelte_oxide_css_transformer/examples/: transformer.rs
crates/svelte_oxide_css_transformer/src/: lib.rs
crates/svelte_oxide_parser/: Cargo.toml
crates/svelte_oxide_parser/examples/: multi-thread.rs  parser.rs  visitor.rs
crates/svelte_oxide_parser/src/: block.rs  comment.rs  diagnostics.rs  element.rs  fragment.rs  identifier.rs  js.rs  lib.rs  names.rs  patterns.rs  script.rs  style.rs  tag.rs  text.rs
crates/svelte_oxide_parser/src/lexer/: byte_handlers.rs  comment.rs  identifier.rs  mod.rs  source.rs  trivia_builder.rs
crates/svelte_oxide_parser/src/utils/: extract_svelte_ignore.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: css_parser.rs  parser.rs
napi/parser/: Cargo.toml  index.d.ts  index.js  package.json  parse.bench.mjs  pnpm-lock.yaml  test.mjs
napi/parser/src/: lib.rs
npm/: README.md
oxc_parser/: all.html  constant.MAX_LEN.html  enum.Kind.html  index.html  sidebar-items.js  struct.Parser.html  struct.ParserReturn.html
playground/: index.html
src/: lib.rs  main.rs  options.rs
ssc/: all.html  index.html  sidebar-items.js
ssc_analyzer/: all.html  index.html
ssc_ast/: all.html  enum.AstKind.html  enum.AstType.html  index.html  sidebar-items.js  struct.AstBuilder.html  struct.Comment.html  struct.Trivias.html  type.TriviasMap.html
ssc_codegen/: all.html  index.html  sidebar-items.js  struct.Codegen.html  struct.CodegenOptions.html  struct.CodegenReturn.html  trait.Gen.html
(+884 files in other folders)
