[workspace]
members  = ["crates/*"]
resolver = "2"


[workspace.package]
authors      = ["Dilshad <a-rustacean@outlook.com>"]
categories   = ["compilers", "development-tools", "web-programming"]
description  = "A collection of Svelte tools written in Rust."
edition      = "2021"
homepage     = "https://github.com/ssc-project/ssc#readme"
keywords     = ["compiler", "svelte"]
license      = "MIT"
readme       = "README.md"
repository   = "https://github.com/ssc-project/ssc"
rust-version = "1.74"

[workspace.dependencies]
assert-unchecked  = "0.1.2"
bitflags          = "2.5.0"
memchr            = "2.7.2"
num-bigint        = "0.4.4"
num-traits        = "0.2.18"
rustc-hash        = "1.1.0"
seq-macro         = "0.3.5"
static_assertions = "1.1.0"
base64            = "0.22.0"
serde             = "1.0.119"
serde_json        = "1.0.116"
ouroboros         = "0.18.3"

# Oxc
oxc_allocator   = "0.13.1"
oxc_ast         = "0.13.1"
oxc_diagnostics = "0.13.1"
oxc_parser      = { version = "0.13.1", path = "crates/oxc_parser" }
oxc_span        = "0.13.1"
oxc_syntax      = "0.13.1"
oxc_sourcemap   = "0.13.1"
oxc_codegen     = "0.13.1"

# Ssc
ssc                 = { version = "0.1.0", path = "crates/ssc" }
ssc_analyzer        = { version = "0.1.0", path = "crates/ssc_analyzer" }
ssc_ast             = { version = "0.1.0", path = "crates/ssc_ast" }
ssc_css_ast         = { version = "0.1.0", path = "crates/ssc_css_ast" }
ssc_parser          = { version = "0.1.0", path = "crates/ssc_parser" }
ssc_codegen         = { version = "0.1.0", path = "crates/ssc_codegen" }
ssc_transformer     = { version = "0.1.0", path = "crates/ssc_transformer" }
ssc_css_codegen     = { version = "0.1.0", path = "crates/ssc_css_codegen" }
ssc_css_parser      = { version = "0.1.0", path = "crates/ssc_css_parser" }
ssc_css_transformer = { version = "0.1.0", path = "crates/ssc_css_transformer" }

[workspace.metadata.cargo-shear]
ignored = ["ssc", "ssc_analyzer", "ssc_transformer"]
