[package]
name    = "ssc_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"

[[bin]]
name = "css_parser"
path = "fuzz_targets/css_parser.rs"

[dependencies]
oxc_allocator = { version = "0.24.0" }
ssc_parser = { path = "../crates/ssc_parser" }
ssc_css_parser = { path = "../crates/ssc_css_parser" }
libfuzzer-sys = "0.4.7"
