[package]
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
name                   = "oxc_parser"
repository.workspace   = true
rust-version.workspace = true
version                = "0.13.1"

[dependencies]
oxc_allocator   = { workspace = true }
oxc_ast         = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_span        = { workspace = true }
oxc_syntax      = { workspace = true }

assert-unchecked  = { workspace = true }
bitflags          = { workspace = true }
num-bigint        = { workspace = true }
num-traits        = { workspace = true }
rustc-hash        = { workspace = true }
seq-macro         = { workspace = true }
static_assertions = { workspace = true }

memchr = { workspace = true }
