[package]
name         = "oxc_parser"
version      = "0.13.1"
authors      = ["Boshen <boshenc@gmail.com>", "Oxc contributors"]
categories   = ["compilers", "development-tools", "web-programming"]
description  = "A collection of JavaScript tools written in Rust."
edition      = "2021"
homepage     = "https://oxc-project.github.io"
keywords     = ["JavaScript", "TypeScript", "linter", "minifier", "parser"]
license      = "MIT"
repository   = "https://github.com/oxc-project/oxc"
rust-version = "1.74"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_allocator   = { workspace = true }
oxc_ast         = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_span        = { workspace = true }
oxc_syntax      = { workspace = true }

assert-unchecked  = { workspace = true }
bitflags          = { workspace = true }
num-bigint        = { workspace = true }
num-traits        = { workspace = true }
rustc-hash        = { workspace = true }
seq-macro         = { workspace = true }
static_assertions = { workspace = true }

memchr = { workspace = true }

[features]
# Expose Lexer for benchmarks
benchmarking = []
