[package]
name                   = "ssc"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_allocator   = { workspace = true }
oxc_span        = { workspace = true }
oxc_diagnostics = { workspace = true }

ssc_ast         = { workspace = true }
ssc_parser      = { workspace = true }
ssc_codegen     = { workspace = true }
ssc_analyzer    = { workspace = true }
ssc_transformer = { workspace = true }

ssc_css_ast         = { workspace = true, optional = true }
ssc_css_parser      = { workspace = true, optional = true }
ssc_css_codegen     = { workspace = true, optional = true }
ssc_css_transformer = { workspace = true, optional = true }
ssc_css_analyzer    = { workspace = true, optional = true }

[features]
default = []
serialize = ["ssc_ast/serialize", "ssc_css_ast/serialize"]
css = [
  "dep:ssc_css_analyzer",
  "dep:ssc_css_ast",
  "dep:ssc_css_codegen",
  "dep:ssc_css_parser",
  "dep:ssc_css_transformer",
]
