[package]
name                   = "ssc_ast"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_ast       = { workspace = true }
oxc_span      = { workspace = true }
oxc_index     = { workspace = true }
oxc_syntax    = { workspace = true }

ssc_css_ast = { workspace = true }

rustc-hash = { workspace = true }
bitflags   = { workspace = true }

serde        = { workspace = true, features = ["derive"], optional = true }
tsify        = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[features]
default = []
serialize = [
  "dep:serde",
  "dep:tsify",
  "dep:wasm-bindgen",
  "oxc_allocator/serialize",
  "oxc_ast/serialize",
  "oxc_span/serialize",
  "ssc_css_ast/serialize",
]
