[package]
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
name                   = "ssc_css_ast"
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
oxc_allocator = { workspace = true }
oxc_span      = { workspace = true }

serde = { workspace = true, features = ["derive"], optional = true }

[features]
default   = []
serialize = ["dep:serde", "oxc_allocator/serialize", "oxc_span/serialize"]
