[package]
name                   = "ssc_css_ast"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_span      = { workspace = true }
oxc_index     = { workspace = true }

serde        = { workspace = true, features = ["derive"], optional = true }
tsify        = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

bitflags = { workspace = true }

[features]
default = []
serialize = [
  "bitflags/serde",
  "dep:serde",
  "dep:tsify",
  "dep:wasm-bindgen",
  "oxc_allocator/serialize",
  "oxc_index/serialize",
  "oxc_span/serialize",
]

[package.metadata.cargo-shear]
ignored = ["wasm-bindgen"]
