[package]
name                   = "ssc_css_codegen"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_syntax    = { workspace = true }
oxc_sourcemap = { workspace = true }

ssc_css_ast = { workspace = true }

[dev-dependencies]
ssc_css_parser = { workspace = true }
base64         = { workspace = true }
