[package]
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
name                   = "ssc_css_parser"
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[lib]
doctest = false

[dependencies]
oxc_allocator   = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_span        = { workspace = true }
oxc_syntax      = { workspace = true }

ssc_css_ast = { workspace = true }

assert-unchecked  = { workspace = true }
rustc-hash        = { workspace = true }
seq-macro         = { workspace = true }
static_assertions = { workspace = true }

memchr = { workspace = true }

[dev-dependencies]
ssc_css_ast = { workspace = true, features = ["serialize"] }
serde_json  = { workspace = true }
ouroboros   = { workspace = true }

[features]
benchmarking = []
