[package]
name                   = "ssc_transformer"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_span      = { workspace = true }
oxc_ast       = { workspace = true }

ssc_ast             = { workspace = true }
ssc_analyzer        = { workspace = true }
ssc_css_transformer = { workspace = true }
