[package]
name                   = "ssc_wasm"
version                = "0.1.0"
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test       = false
doctest    = false

[dependencies]
ssc = { workspace = true, features = ["serialize"] }

serde = { workspace = true }

wasm-bindgen       = { workspace = true }
serde-wasm-bindgen = { workspace = true }
tsify              = { workspace = true }
