[package]
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
name                   = "svelte_oxide"
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
oxc_allocator   = { workspace = true }
oxc_diagnostics = { workspace = true }

svelte_oxide_analyzer = { workspace = true }
svelte_oxide_ast      = { workspace = true }
svelte_oxide_common   = { workspace = true }
svelte_oxide_parser   = { workspace = true }
