[package]
name                   = "svelte_oxide_codegen"
version                = "0.1.0"
publish                = true
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
categories.workspace   = true

[lib]
doctest = false

[dependencies]
oxc_allocator = { workspace = true }
oxc_syntax    = { workspace = true }
oxc_sourcemap = { workspace = true }
oxc_codegen   = { workspace = true }

svelte_oxide_ast         = { workspace = true }
svelte_oxide_css_codegen = { workspace = true }

[dev-dependencies]
svelte_oxide_parser = { workspace = true }
base64              = { workspace = true }
