[package]
authors.workspace      = true
categories.workspace   = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
name                   = "svelte_oxide_parser"
readme.workspace       = true
repository.workspace   = true
rust-version.workspace = true
version                = "0.1.0"

[dependencies]
