[package]
name                   = "ssc_parser_napi"
version                = "0.0.0"
publish                = false
authors.workspace      = true
description.workspace  = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
categories.workspace   = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
test       = false
doctest    = false

[dependencies]
oxc_allocator    = { workspace = true }
ssc_parser       = { workspace = true }
ssc_ast          = { workspace = true, features = ["serialize"] }
oxc_span         = { workspace = true }
oxc_diagnostics  = { workspace = true }

tokio       = { workspace = true }
napi        = { workspace = true, features = ["async"] }
napi-derive = { workspace = true }
serde_json  = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["napi"]

[build-dependencies]
napi-build = { workspace = true }
